# serializer version: 1
# name: TestGZDoomGenerator.test_generate
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate[config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate[script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '0'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '0'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '0'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '1'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '1'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_api': '1'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 1
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_vsync': 'False'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_vsync': 'False'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=False
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_vsync': 'False'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_vsync': 'True'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_vsync': 'True'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=True
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'gz_vsync': 'True'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'nologo': '0'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'nologo': '0'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'nologo': '0'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'nologo': '1'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '-nologo',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'nologo': '1'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[arm64-{'nologo': '1'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  gl_es 1
  vid_preferbackend 3
  gles_use_mapped_buffer true
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '0'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '0'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '0'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '1'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '1'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_api': '1'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 1
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_vsync': 'False'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_vsync': 'False'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=False
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_vsync': 'False'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_vsync': 'True'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_vsync': 'True'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=True
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'gz_vsync': 'True'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'nologo': '0'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'nologo': '0'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'nologo': '0'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'nologo': '1'}]
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
      '-nologo',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'nologo': '1'}][config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_config[x86_64-{'nologo': '1'}][script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_controllers
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'rom.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '''
        030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,
        030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,
      ''',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_controllers[config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  Joy2=+use
  Joy12=crouch
  Joy6=weapprev
  Joy5=weapnext
  Joy9=pause
  Joy10=menu_main
  Joy3=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  Joy1=am_clearmarks
  Joy2=am_setmark
  Joy6=am_zoomout
  Joy5=am_zoomin
  Joy4=am_togglefollow
  
  [Joy:JS:0]
  Enabled=1
  
  [Joy:JS:1]
  Enabled=0
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_controllers[script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_existing[config]
  '''
  [IWADSearch.Directories]
  Path=/some/path
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/some/other/path
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/another/path
  Path=/yet/another/path
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  use_joystick=true
  vid_vsync=false
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_existing[script]
  '''
  # This file is automatically generated by gzdoomGenerator.py
  logfile "/userdata/system/logs/gzdoom.log"
  vid_fps false
  vid_preferbackend 0
  echo BATOCERA
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_existing_no_global_settings
  '''
  [IWADSearch.Directories]
  Path=/some/path
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/some/other/path
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/another/path
  Path=/yet/another/path
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_generate_rom_gzdoom
  tuple(
    list([
      'gzdoom',
      '-iwad',
      'DOOM2.WAD',
      '-file',
      'ALIENS_ERADICATION_TC_2_0.pk3',
      'ERADICATION_MAPSET_2_0.wad',
      '-exec',
      '/userdata/system/configs/gzdoom/gzdoom.cfg',
      '-width',
      '1920',
      '-height',
      '1080',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestGZDoomGenerator.test_generate_rom_gzdoom[config]
  '''
  [IWADSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [FileSearch.Directories]
  Path=/userdata/roms/gzdoom/romdir
  
  [SoundfontSearch.Directories]
  Path=/usr/share/gzdoom/soundfonts
  Path=/usr/share/gzdoom/fm_banks
  Path=/userdata/system/configs/gzdoom/soundfonts
  Path=/userdata/system/configs/gzdoom/fm_banks
  
  [GlobalSettings]
  vid_vsync=false
  use_joystick=true
  
  [Doom.Bindings]
  1=slot 1
  2=slot 2
  3=slot 3
  4=slot 4
  5=slot 5
  6=slot 6
  7=slot 7
  8=slot 8
  9=slot 9
  0=slot 0
  W=+forward
  S=+back
  A=+moveleft
  D=+moveright
  E=+use
  T=messagemode
  LeftBracket=invprev
  RightBracket=invnext
  Enter=invuse
  Shift=+speed
  X=crouch
  Space=+jump
  Tab=togglemap
  `=toggleconsole
  \=+showscores
  CapsLock=toggle cl_run
  F1=menu_help
  F2=menu_save
  F3=menu_load
  F4=menu_options
  F5=menu_display
  F6=quicksave
  F7=menu_endgame
  F8=togglemessages
  F9=quickload
  F10=menu_quit
  F11=bumpgamma
  F12=spynext
  SysRq=screenshot
  Pause=pause
  Home=land
  PgUp=+moveup
  End=centerview
  PgDn=+lookup
  Ins=+movedown
  Del=+lookdown
  Mouse1=+attack
  Mouse2=+altattack
  MWheelUp=weapprev
  MWheelDown=weapnext
  MWheelRight=invnext
  MWheelLeft=invprev
  Axis3Plus=+altattack
  Axis6Plus=+attack
  DPadUp=togglemap
  DPadDown=invuse
  DPadLeft=invprev
  DPadRight=invnext
  Pad_Start=menu_main
  Pad_Back=pause
  LThumb=crouch
  LShoulder=weapprev
  RShoulder=weapnext
  LTrigger=+altattack
  RTrigger=+attack
  Pad_A=+use
  Pad_Y=+jump
  
  [Doom.AutomapBindings]
  0=am_gobig
  ==+am_zoomin
  -=+am_zoomout
  P=am_toggletexture
  F=am_togglefollow
  G=am_togglegrid
  C=am_clearmarks
  M=am_setmark
  KP-=+am_zoomout
  KP+=+am_zoomin
  UpArrow=+am_panup
  LeftArrow=+am_panleft
  RightArrow=+am_panright
  DownArrow=+am_pandown
  POV1Up=+am_panup
  POV1Right=+am_panright
  POV1Down=+am_pandown
  POV1Left=+am_panleft
  MWheelUp=am_zoom 1.2
  MWheelDown=am_zoom -1.2
  DPadUp=+am_panup
  DPadDown=+am_pandown
  DPadLeft=+am_panleft
  DPadRight=+am_panright
  LShoulder=+am_zoomout
  RShoulder=+am_zoomin
  Pad_A=am_setmark
  Pad_B=am_clearmarks
  Pad_X=am_togglefollow
  
  
  '''
# ---
# name: TestGZDoomGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'restore_store': 'KEY_F9',
      'save_store': 'KEY_F6',
    }),
    'name': 'gzdoom',
  })
# ---
